src/objects/Events__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account (if applicable)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Annual_Revenue__c</fullName>
        <label>Actual Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Cost__c</fullName>
        <label>Actual Cost</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Added_to_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Added to Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advertisement_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box - if, for this event, we need to submit an advertisement, e.g. for the event program or association newsletter.  Be sure to notify the Marketing Manager of the submission requirements and deadline.</description>
        <label>Advertisement Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anticipated_Annual_Revenue__c</fullName>
        <label>Anticipated Annual Revenue</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Bryan</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Corpus Christi</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Fort Worth</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Pennsylvania</fullName>
                </value>
                <value>
                    <fullName>San Antonio</fullName>
                </value>
                <value>
                    <fullName>Tyler</fullName>
                </value>
                <value>
                    <fullName>Wilmington</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Attendee_Count__c</fullName>
        <label>Estimated Attendee Count</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-25</fullName>
                </value>
                <value>
                    <fullName>25-50</fullName>
                </value>
                <value>
                    <fullName>50-75</fullName>
                </value>
                <value>
                    <fullName>75-100</fullName>
                </value>
                <value>
                    <fullName>100+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <label>Event End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <label>Event Location</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Payment_Status__c</fullName>
        <label>Event Payment Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Event Approval</fullName>
                </value>
                <value>
                    <fullName>Check Request Made</fullName>
                </value>
                <value>
                    <fullName>Payment via Check Made</fullName>
                </value>
                <value>
                    <fullName>Expensed Directly by AE</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <label>Event Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_URL__c</fullName>
        <label>Event URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>First_Time_Participation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this is the first time we have attended/sponsored/participated-in this event.</inlineHelpText>
        <label>First Time Participation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flights_Approved__c</fullName>
        <label>Flights Approved</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Flights_Required__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flights_Required__c</fullName>
        <label>Flights Required</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lexitas_AE_Attendees__c</fullName>
        <label>Lexitas AE Attendees</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aaron Brown</fullName>
                </value>
                <value>
                    <fullName>Adam Goldstein</fullName>
                </value>
                <value>
                    <fullName>Anthony Minervini</fullName>
                </value>
                <value>
                    <fullName>Barbara Donnelly</fullName>
                </value>
                <value>
                    <fullName>Billy Eubank</fullName>
                </value>
                <value>
                    <fullName>Brennan Tucker</fullName>
                </value>
                <value>
                    <fullName>Carlos Perez</fullName>
                </value>
                <value>
                    <fullName>Chad Davenport</fullName>
                </value>
                <value>
                    <fullName>Charlynn Oborn</fullName>
                </value>
                <value>
                    <fullName>Cheryl Ormston</fullName>
                </value>
                <value>
                    <fullName>Christian Hespe</fullName>
                </value>
                <value>
                    <fullName>Corey Cormier</fullName>
                </value>
                <value>
                    <fullName>Doug Blanchard</fullName>
                </value>
                <value>
                    <fullName>Eddie Reeves</fullName>
                </value>
                <value>
                    <fullName>Ed Kerpius</fullName>
                </value>
                <value>
                    <fullName>Fanny Ybarra</fullName>
                </value>
                <value>
                    <fullName>Jason Primuth</fullName>
                </value>
                <value>
                    <fullName>Jon Hefler</fullName>
                </value>
                <value>
                    <fullName>Joseph Reggina</fullName>
                </value>
                <value>
                    <fullName>Karla Howes</fullName>
                </value>
                <value>
                    <fullName>Kayla Lambert</fullName>
                </value>
                <value>
                    <fullName>Ken Varallo</fullName>
                </value>
                <value>
                    <fullName>Kurt Fetzer</fullName>
                </value>
                <value>
                    <fullName>Lisa Beabout</fullName>
                </value>
                <value>
                    <fullName>Lisa Goulette</fullName>
                </value>
                <value>
                    <fullName>Mark Hoorwitz</fullName>
                </value>
                <value>
                    <fullName>Marlee Steinbrueck</fullName>
                </value>
                <value>
                    <fullName>Meredith Manak</fullName>
                </value>
                <value>
                    <fullName>Meron Hewis</fullName>
                </value>
                <value>
                    <fullName>Merten Rice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Projected_Cost__c</fullName>
        <label>Projected Cost</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ROI__c</fullName>
        <formula>If (Actual_Annual_Revenue__c &gt; 0, Actual_Annual_Revenue__c/ Actual_Cost__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Membership</fullName>
                </value>
                <value>
                    <fullName>Attending Only</fullName>
                </value>
                <value>
                    <fullName>CLE</fullName>
                </value>
                <value>
                    <fullName>Exhibitor</fullName>
                </value>
                <value>
                    <fullName>Happy Hour</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Events</label>
    <listViews>
        <fullName>All_Events</fullName>
        <columns>NAME</columns>
        <columns>Event_Location__c</columns>
        <columns>Status__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Lexitas_AE_Attendees__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Events</label>
    </listViews>
    <listViews>
        <fullName>All_Future_Events</fullName>
        <columns>Business_Unit__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>Event_Location__c</columns>
        <columns>Status__c</columns>
        <columns>Projected_Cost__c</columns>
        <columns>Flights_Required__c</columns>
        <columns>Flights_Approved__c</columns>
        <columns>Lexitas_AE_Attendees__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Denied</value>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>notEqual</operation>
            <value>Pennsylvania,Wilmington</value>
        </filters>
        <label>All Future non PA Events</label>
    </listViews>
    <listViews>
        <fullName>All_Past_Events</fullName>
        <columns>NAME</columns>
        <columns>Event_Location__c</columns>
        <columns>Status__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Lexitas_AE_Attendees__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Start_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>All Past Events</label>
    </listViews>
    <listViews>
        <fullName>Bryan_Events</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Projected_Cost__c</columns>
        <columns>Lexitas_AE_Attendees__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>includes</operation>
            <value>Bryan</value>
        </filters>
        <label>Bryan Events</label>
    </listViews>
    <listViews>
        <fullName>Events_Pending_Approval</fullName>
        <columns>Event_Start_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Event_Location__c</columns>
        <columns>Status__c</columns>
        <columns>Projected_Cost__c</columns>
        <columns>Lexitas_AE_Attendees__c</columns>
        <columns>Flights_Required__c</columns>
        <columns>Flights_Approved__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>notEqual</operation>
            <value>Pennsylvania,Wilmington</value>
        </filters>
        <label>Non PA Events Pending Approval</label>
    </listViews>
    <listViews>
        <fullName>Events_Pending_Payment</fullName>
        <columns>NAME</columns>
        <columns>Event_Location__c</columns>
        <columns>Status__c</columns>
        <columns>Event_Payment_Status__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Lexitas_AE_Attendees__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Payment_Status__c</field>
            <operation>equals</operation>
            <value>Pending Event Approval,Check Request Made</value>
        </filters>
        <label>Events Pending Payment</label>
    </listViews>
    <listViews>
        <fullName>Lisa_And_Fanny_Future</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>NAME</columns>
        <columns>Event_Location__c</columns>
        <columns>Status__c</columns>
        <columns>Flights_Required__c</columns>
        <columns>Flights_Approved__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Lexitas_AE_Attendees__c</columns>
        <columns>Added_to_Website__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Lexitas_AE_Attendees__c</field>
            <operation>includes</operation>
            <value>Lisa Goulette,Fanny Ybarra,Charlynn Oborn</value>
        </filters>
        <label>Lisa/Fanny/Charlynn Future Events</label>
    </listViews>
    <listViews>
        <fullName>NY_Events</fullName>
        <columns>NAME</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Lexitas_AE_Attendees__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>New York</value>
        </filters>
        <label>NY Events</label>
    </listViews>
    <nameField>
        <label>Event</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>No_Status_Edits_By_AEs</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Status__c,&quot;Approved&quot;)  &amp;&amp; 
(ISNEW()|| ISCHANGED(Status__c)) &amp;&amp;
NOT(
($User.Username = &apos;aaron.brown@lexitas.sf&apos;) ||
($User.Username = &apos;kvarallo@nextgenreporting.com&apos;) ||
($User.Username = &apos;kayla.lambert@lexitas.sf&apos;) ||
($User.Username = &apos;chad.davenport@lexitas.sf&apos;)
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Only your Sales Manager or the Marketing Manager may approve events.</errorMessage>
    </validationRules>
</CustomObject>